meja/tests/unbound_type_param-fail.meja
type t('a) = {x : 'b};
